--- a/modd.conf
+++ b/modd.conf
@@ -1,3 +1,3 @@
 **/*.go !vendor/**/* !_tests/**/* !docs/**/* {
-    prep: make build & make build-linux
+    prep: make build & make build-linux-arm64
 }
